[project]
name = "asya-samples"
version = "0.1.0"
description = "Sample actor mesh pipelines for Asya"
requires-python = ">=3.13"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Flow files reference actors resolved by the compiler, not Python imports
# Flow files reference actors resolved by the compiler, not Python imports
"src/*/flows/flow_*.py" = ["F841", "F821", "F811", "E722", "SIM108"]
